exports[`test Renders score ok. 1`] = `
<div
  className="container centred">
  <h1
    className="heading">
    Your Ranking!
  </h1>
  <h2
    className="score">
    #
    2
  </h2>
</div>
`;

exports[`test Renders unrated if no ranking. 1`] = `
<div
  className="container centred">
  <h1
    className="heading">
    Your Ranking!
  </h1>
  <h2
    className="score">
    #
    Unranked!
  </h2>
</div>
`;
